fixed main nav z-index, local guide (hidden)

--- a/css/main.css
+++ b/css/main.css
@@ -118,6 +118,8 @@ p {
     height: 100px;
     margin-right: 5%;
     float: right;
+    position: relative;
+    z-index: 1;
 }
 
 .main-nav ul {
@@ -204,7 +206,7 @@ background-position: center;
 /*--background-image: url("../images/aurora@3x.jpg");--*/
 	background-size: cover;
 	background-repeat: no-repeat;
-    background-position: center;	
+  background-position: center;	
 	position: relative;
 }
 
@@ -403,6 +405,7 @@ section {
 
 .project {
 	margin: 0;
+  position: relative;
 }
 
 #work .project:first-of-type {
@@ -454,6 +457,21 @@ section {
 */
 }
 
+
+.project h2, .project p {
+	-webkit-transition: all 0.4s;
+    -moz-transition: all 0.4s;
+    -o-transition: all 0.4s;
+    transition: all 0.4s;
+}
+
+.project .row:hover p {color: #8B8C9A;}
+.project .row :hover h2 {color: #8B8C9A;}
+
+.project p {
+	max-width: 300px;
+}
+
 /*--RentApp UX colors--*/
 
 
@@ -503,7 +521,6 @@ section {
 
 
 #rentapp-ui .project-img img {
-	margin-top: -6%;
 	max-width: 430px;
 }
 
@@ -545,16 +562,42 @@ section {
 	border-color: #FCE7E5;	
 }
 
+/*--Local guide colors--*/
 
-.project h2, .project p {
-	-webkit-transition: all 0.4s;
-    -moz-transition: all 0.4s;
-    -o-transition: all 0.4s;
-    transition: all 0.4s;
+#localguide .project-img img{
+  max-width: 330px;
+   margin-top: -40px;
 }
 
-.project:hover p {color: #8B8C9A;}
-.project:hover h2 {color: #8B8C9A;}
+#localguide .project-info {
+  background-image: url("../images/04.png");
+}
+
+
+.disabled {
+  height: 100%;
+  width: 100%;
+  opacity: .2;
+  pointer-events: none;
+}
+
+.disabled-text{
+    font-weight: 600;
+    font-size: 50px;
+    font-style: italic;
+    letter-spacing: .125em;
+    text-align: center;
+    top: 50%;
+    left: 50%;
+    position: absolute;
+    transform: translate(-50%, -50%);
+    color:  #797979;
+    z-index: 1;
+    min-width: 280px;
+    width: 50%;
+    background-color: #f3f3f3a3;
+    display: inline-block;
+}
 
 
 /*-WEIRD LINE HIGHLIGHT----
@@ -615,12 +658,12 @@ img#about-photo {
 /*--resume button--*/
 .button-resume {
     margin: 2% auto;
-	font-family: 'Muli', sans-serif;
-	font-weight: 500;
-	font-size: .8em;
-	color: #000;
-	letter-spacing: 0.1em;
-	text-transform: uppercase;
+  	font-family: 'Muli', sans-serif;
+  	font-weight: 500;
+  	font-size: .8em;
+  	color: #000;
+  	letter-spacing: 0.1em;
+  	text-transform: uppercase;
     display: inline-block;
     text-decoration: none;
     position: relative;
@@ -701,6 +744,7 @@ footer {
 }
 
 footer p{
+    width: 100%;
     text-align: center;
     font-size: .8em;
     color: #757575;
@@ -887,8 +931,8 @@ main h2 {
 
 main h3 {
     margin: 4% 0;	
-	text-align: left;
-	font-size: 1.25em;
+	  text-align: left;
+	  font-size: 1.25em;
   	font-family: 'Muli', sans-serif;
   	font-weight: 600;
   	letter-spacing: 0.1em;
@@ -1048,10 +1092,10 @@ h4.bold-p{
 	text-transform: capitalize;
 	letter-spacing: 0;
 	font-size: 1.2rem;
-    font-weight: 600;
-    line-height: 1.8;
-    color: #333447;
-    margin: 0;
+  font-weight: 600;
+  line-height: 1.8;
+  color: #333447;
+  margin: 0;
 }
 
 img.lightbulb {
@@ -1077,9 +1121,33 @@ img.lightbulb {
 p.bold {
 	font-size: 1.25rem;
 	font-weight: 600;
-    margin-top: 0;
-    margin-bottom: -15px;	
+  margin-top: 0;
+  margin-bottom: -15px;	
 }
+
+.next-project .image {
+  background: url("../images/hero-background.jpg");
+  opacity: 0;
+  -webkit-transition: ease-in all 3s;
+  -moz-transition: ease-in all 3s;
+  -o-transition: ease-in all 3s;
+  transition: ease-in all 3s;
+  position: absolute;
+  top: 0;
+    left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+
+.next-project:hover .image{
+  opacity: 1;
+}
+
+.next-project .text{
+  z-index: 1;
+}
+
 
 /*----- mobile 846 ------*/
 
@@ -1113,7 +1181,7 @@ p.bold {
 	}
 
 	.intro .detail{
-	    width: 100%;
+	  width: 100%;
 		margin: 8% 0 0;
 	}
 
@@ -1122,6 +1190,8 @@ p.bold {
 	}
 
 }
+
+/*----- mobile 720 ------*/
 
 @media only screen and (max-width: 720px) {
 
@@ -1150,6 +1220,10 @@ p.bold {
 		padding-left: 0; 
 	}
 
+  .about-text {
+    margin: 0 20px;
+  }
+
 	.button-resume {
 	   margin: 0 auto;
 	}
@@ -1159,12 +1233,13 @@ p.bold {
 
 	}
 
-    h4.bold-p {
-    text-align: center;
-    }
+  h4.bold-p {
+  text-align: center;
+  }
 
 }
 
+/*----- mobile 520 to 846 ------*/
 
 @media only screen and (min-width: 540px) and (max-width: 846px) {
 
@@ -1173,6 +1248,7 @@ p.bold {
   }
 }
 
+/*----- mobile 540 ------*/
 
 @media only screen and (max-width: 540px) {
 
@@ -1231,8 +1307,6 @@ p.bold {
 	.main-nav li{
 		margin: 10px 10px;
 	}
-
-
 
 }
 
